--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
 <body>
   <header>
     <nav>
-      <a href="">Web Studio</a>
+      <a class="link" href="">Web Studio</a>
       <ul>
-        <li><a href="">Студия</a></li>
-        <li><a href="">Портфолио</a></li>
-        <li><a href="">Контакты</a></li>
+        <li><a class="link" href="">Студия</a></li>
+        <li><a class="link" href="./portfolio.html">Портфолио</a></li>
+        <li><a class="link" href="">Контакты</a></li>
       </ul>
     </nav> 
     <ul>
-      <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-      <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      <li><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+      <li><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
     </ul>
   </header> 
   
@@ -84,12 +84,12 @@
  </main>
  
  <footer>
-    <a href="">Web Studio</a>
+    <a class="link" href="">Web Studio</a>
     <address>
       <ul>
-        <li><a href="https://goo.gl/maps/oXbqcdVndfFrmnHC9">г. Киев, пр-т Леси Украинки, 26</a></li>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <li><a class="link" href="https://goo.gl/maps/oXbqcdVndfFrmnHC9">г. Киев, пр-т Леси Украинки, 26</a></li>
+        <li><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
     </address>
   </footer> 
