--- a/portfolio.html
+++ b/portfolio.html
@@ -5,16 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-    <header>
+    <header class="header">
         <nav>
-          <a class="link" href="./index.html">Web Studio</a>
+          <a class="link logo" href=""><span>Web</span>Studio</a>
           <ul class="list">
-            <li><a class="link" href="">Студия</a></li>
-            <li><a class="link" href="">Портфолио</a></li>
-            <li><a class="link" href="">Контакты</a></li>
+            <li><a class="link navigation-link" href="">Студия</a></li>
+            <li><a class="link navigation-link" href="">Портфолио</a></li>
+            <li><a class="link navigation-link" href="#contacts">Контакты</a></li>
           </ul>
         </nav> 
         <ul class="list">
@@ -23,7 +26,7 @@
         </ul>
       </header> 
       
-    <main>
+ <main>
       <h1 hidden>Портфолио работ</h1>
       <ul class="list">
         <li><button type="button">Все</button></li>
@@ -34,55 +37,73 @@
       </ul>
       <ul class="list">
         <li>
-          <img src="./images/img-website-first.jpg" alt="Вебсайт Технокряк" width="370" height="294">
-          <h2>Технокряк</h2>
-          <p>Веб-сайт</p>
+          <a href="" class="link">
+            <img src="./images/img-website-first.jpg" alt="Вебсайт Технокряк" width="370" height="294">
+            <h2>Технокряк</h2>
+            <p>Веб-сайт</p>
+          </a>
         </li>
         <li>
-          <img src="./images/img-poster-design.jpg" alt="" width="370" height="294">
-          <h2>Постер New Orlean vs Golden Star</h2>
-          <p>Дизайн</p>
+          <a href="" class="link">
+            <img src="./images/img-poster-design.jpg" alt="" width="370" height="294">
+            <h2>Постер New Orlean vs Golden Star</h2>
+            <p>Дизайн</p>
+          </a>
         </li>
         <li>
-          <img src="./images/img-restaurant-seafood.jpg" alt="" width="370" height="294">
-          <h2>Ресторан Seafood</h2>
-          <p>Приложение</p>
+          <a href="" class="link">
+            <img src="./images/img-restaurant-seafood.jpg" alt="" width="370" height="294">
+            <h2>Ресторан Seafood</h2>
+            <p>Приложение</p>
+          </a>
         </li>
         <li>
-          <img src="./images/img-project-prime.jpg" alt="" width="370" height="294">
-          <h2>Проект Prime</h2>
-          <p>Маркетинг</p>
+          <a href="" class="link">
+            <img src="./images/img-project-prime.jpg" alt="" width="370" height="294">
+            <h2>Проект Prime</h2>
+            <p>Маркетинг</p>
+          </a>
         </li>
         <li>
-          <img src="./images/img-project-boxes.jpg" alt="" width="370" height="294">
-          <h2>Проект Boxes</h2>
-          <p>Приложение</p>
+          <a href="" class="link">
+            <img src="./images/img-project-boxes.jpg" alt="" width="370" height="294">
+            <h2>Проект Boxes</h2>
+            <p>Приложение</p>
+          </a>
         </li>
         <li>
-          <img src="./images/img-website-second.jpg" alt="" width="370" height="294">
-          <h2>Inspiration has no Borders</h2>
-          <p>Веб-сайт</p>
+          <a href="" class="link">
+            <img src="./images/img-website-second.jpg" alt="" width="370" height="294">
+            <h2>Inspiration has no Borders</h2>
+            <p>Веб-сайт</p>
+          </a>
         </li>
         <li>
-          <img src="./images/img-limited-edition.jpg" alt="" width="370" height="294">
-          <h2>Издание Limited Edition</h2>
-          <p>Дизайн</p>
+          <a href="" class="link">
+            <img src="./images/img-limited-edition.jpg" alt="" width="370" height="294">
+            <h2>Издание Limited Edition</h2>
+            <p>Дизайн</p>
+          </a>
         </li>
         <li>
-          <img src="./images/img-project-lab.jpg" alt="" width="370" height="294">
-          <h2>Проект LAB</h2>
-          <p>Маркетинг</p>
+          <a href="" class="link">
+            <img src="./images/img-project-lab.jpg" alt="" width="370" height="294">
+            <h2>Проект LAB</h2>
+            <p>Маркетинг</p>
+          </a>
         </li>
         <li>
-          <img src="./images/img-growing-business.jpg" alt="Приложение Growing Business" width="370" height="294">
-          <h2>Growing Business</h2>
-          <p>Приложение</p>
+          <a href="" class="link">
+            <img src="./images/img-growing-business.jpg" alt="Приложение Growing Business" width="370" height="294">
+            <h2>Growing Business</h2>
+            <p>Приложение</p>
+          </a>
         </li>
       </ul>    
-    </main>
+ </main>
       
-      <footer>
-        <a class="link" href="./index.html">Web Studio</a>
+      <footer class="footer" id="contacts">
+        <a class="link logo-footer" href=""><span>Web</span>Studio</a>
         <address>
           <ul class="list">
             <li><a href="https://goo.gl/maps/oXbqcdVndfFrmnHC9">г. Киев, пр-т Леси Украинки, 26</a></li>
