--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <header class="header">
     <nav>
-      <a class="link logo" href=""><span>Web</span>Studio</a>
+      <a class="link logo" href="">Web<span class="logo-header">Studio</span></a>
       <ul class="list">
         <li><a class="link navigation-link" href="">Студия</a></li>
         <li><a class="link navigation-link" href="./portfolio.html">Портфолио</a></li>
@@ -21,37 +21,37 @@
       </ul>
     </nav> 
     <ul class="list">
-      <li><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-      <li><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+      <li><a class="link contact-header" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+      <li><a class="link contact-header" href="tel:+380961111111">+38 096 111 11 11</a></li>
     </ul>
   </header> 
   
  <main>
   <section class="hero">
     <h1>Эффективные решения <br> для вашего бизнеса</h1>
-    <button type="button">Заказать услугу</button>
+    <button class="button-hero" type="button">Заказать услугу</button>
   </section>
 
-  <section>
+  <section class="about-our-work">
     <ul class="list">
       <li>
-        <h3>Внимание к деталям</h3>
-        <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+        <h3 class="title-about">Внимание к деталям</h3>
+        <p class="about-description">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
       </li>
       <li>
-        <h3>Пунктуальность</h3>
-        <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+        <h3 class="title-about">Пунктуальность</h3>
+        <p class="about-description">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
       </li>
       <li>
-        <h3>Планирование</h3>
-        <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+        <h3 class="title-about">Планирование</h3>
+        <p class="about-description">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
       </li>
       <li>
-        <h3>Современные технологии</h3>
-        <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+        <h3 class="title-about">Современные технологии</h3>
+        <p class="about-description">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
       </li>
     </ul>
-    <h2>Чем мы занимаемся</h2>
+    <h2 class="section-title">Чем мы занимаемся</h2>
     <ul class="list">
       <li><img src="./images/img1.jpg" alt="photo1" width="370"></li>
       <li><img src="./images/img2.jpg" alt="photo2" width="370"></li>
@@ -59,40 +59,40 @@
     </ul>
   </section>
   
-  <section>
-  <h2>Наша команда</h2>
+  <section class="about-our-team">
+  <h2 class="section-title">Наша команда</h2>
   <ul class="list">
-    <li>
+    <li class="team-list">
       <img src="./images/photo1.jpg" alt="Photo of Product Designer" width="270">
-      <h3>Игорь Демьяненко</h3>
-      <p>Product Designer</p>
+      <h3 class="team-name">Игорь Демьяненко</h3>
+      <p class="team-position">Product Designer</p>
     </li>
-    <li>
+    <li class="team-list">
       <img src="./images/photo2.jpg" alt="Photo of Frontend Developer" width="270">
-      <h3>Ольга Репина</h3>
-      <p>Frontend Developer</p>
+      <h3 class="team-name">Ольга Репина</h3>
+      <p class="team-position">Frontend Developer</p>
     </li>
-    <li>
+    <li class="team-list">
       <img src="./images/photo3.jpg" alt="Photo of Marketing" width="270">
-      <h3>Николай Тарасов</h3>
-      <p>Marketing</p>
+      <h3 class="team-name">Николай Тарасов</h3>
+      <p class="team-position">Marketing</p>
     </li>
-    <li>
+    <li class="team-list">
       <img src="./images/photo4.jpg" alt="Photo of UI Designer" width="270">
-      <h3>Михаил Ермаков</h3>
-      <p>UI Designer</p>
+      <h3 class="team-name">Михаил Ермаков</h3>
+      <p class="team-position">UI Designer</p>
     </li>
   </ul>
   </section>
  </main>
  
  <footer class="footer" id="contacts">
-  <a class="link logo-footer" href=""><span>Web</span>Studio</a>
+  <a class="link logo" href="">Web<span class="logo-footer">Studio</span></a>
     <address>
-      <ul class="list">
-        <li><a class="link" href="https://goo.gl/maps/oXbqcdVndfFrmnHC9">г. Киев, пр-т Леси Украинки, 26</a></li>
-        <li><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+      <ul class="list contact-footer">
+        <li><a class="link contact-footer-color-adress" href="https://goo.gl/maps/oXbqcdVndfFrmnHC9">г. Киев, пр-т Леси Украинки, 26</a></li>
+        <li><a class="link contact-footer-color" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a class="link contact-footer-color" href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
     </address>
   </footer> 
