--- a/portfolio.html
+++ b/portfolio.html
@@ -11,106 +11,106 @@
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-    <header class="header">
-        <nav>
-          <a class="link logo" href=""><span>Web</span>Studio</a>
-          <ul class="list">
-            <li><a class="link navigation-link" href="">Студия</a></li>
-            <li><a class="link navigation-link" href="">Портфолио</a></li>
-            <li><a class="link navigation-link" href="#contacts">Контакты</a></li>
-          </ul>
-        </nav> 
-        <ul class="list">
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
-        </ul>
-      </header> 
+  <header class="header">
+    <nav>
+      <a class="link logo" href="">Web<span class="logo-header">Studio</span></a>
+      <ul class="list">
+        <li><a class="link navigation-link" href="./index.html">Студия</a></li>
+        <li><a class="link navigation-link" href="./portfolio.html">Портфолио</a></li>
+        <li><a class="link navigation-link" href="#contacts">Контакты</a></li>
+      </ul>
+    </nav> 
+    <ul class="list">
+      <li><a class="link contact-header" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+      <li><a class="link contact-header" href="tel:+380961111111">+38 096 111 11 11</a></li>
+    </ul>
+  </header> 
       
  <main>
       <h1 hidden>Портфолио работ</h1>
       <ul class="list">
-        <li><button type="button">Все</button></li>
-        <li><button type="button">Веб-сайты</button></li>
-        <li><button type="button">Приложения</button></li>
-        <li><button type="button">Дизайн</button></li>
-        <li><button type="button">Маркетинг</button></li>
+        <li><button type="button" class="portfolio-button">Все</button></li>
+        <li><button type="button" class="portfolio-button">Веб-сайты</button></li>
+        <li><button type="button" class="portfolio-button">Приложения</button></li>
+        <li><button type="button" class="portfolio-button">Дизайн</button></li>
+        <li><button type="button" class="portfolio-button">Маркетинг</button></li>
       </ul>
       <ul class="list">
         <li>
           <a href="" class="link">
             <img src="./images/img-website-first.jpg" alt="Вебсайт Технокряк" width="370" height="294">
-            <h2>Технокряк</h2>
-            <p>Веб-сайт</p>
+            <h2 class="portfolio-list-title">Технокряк</h2>
+            <p class="portfolio-list-category">Веб-сайт</p>
           </a>
         </li>
         <li>
           <a href="" class="link">
             <img src="./images/img-poster-design.jpg" alt="" width="370" height="294">
-            <h2>Постер New Orlean vs Golden Star</h2>
-            <p>Дизайн</p>
+            <h2 class="portfolio-list-title">Постер New Orlean vs Golden Star</h2>
+            <p class="portfolio-list-category">Дизайн</p>
           </a>
         </li>
         <li>
           <a href="" class="link">
             <img src="./images/img-restaurant-seafood.jpg" alt="" width="370" height="294">
-            <h2>Ресторан Seafood</h2>
-            <p>Приложение</p>
+            <h2 class="portfolio-list-title">Ресторан Seafood</h2>
+            <p class="portfolio-list-category">Приложение</p>
           </a>
         </li>
         <li>
           <a href="" class="link">
             <img src="./images/img-project-prime.jpg" alt="" width="370" height="294">
-            <h2>Проект Prime</h2>
-            <p>Маркетинг</p>
+            <h2 class="portfolio-list-title">Проект Prime</h2>
+            <p class="portfolio-list-category">Маркетинг</p>
           </a>
         </li>
         <li>
           <a href="" class="link">
             <img src="./images/img-project-boxes.jpg" alt="" width="370" height="294">
-            <h2>Проект Boxes</h2>
-            <p>Приложение</p>
+            <h2 class="portfolio-list-title">Проект Boxes</h2>
+            <p class="portfolio-list-category">Приложение</p>
           </a>
         </li>
         <li>
           <a href="" class="link">
             <img src="./images/img-website-second.jpg" alt="" width="370" height="294">
-            <h2>Inspiration has no Borders</h2>
-            <p>Веб-сайт</p>
+            <h2 class="portfolio-list-title">Inspiration has no Borders</h2>
+            <p class="portfolio-list-category">Веб-сайт</p>
           </a>
         </li>
         <li>
           <a href="" class="link">
             <img src="./images/img-limited-edition.jpg" alt="" width="370" height="294">
-            <h2>Издание Limited Edition</h2>
-            <p>Дизайн</p>
+            <h2 class="portfolio-list-title">Издание Limited Edition</h2>
+            <p class="portfolio-list-category">Дизайн</p>
           </a>
         </li>
         <li>
           <a href="" class="link">
             <img src="./images/img-project-lab.jpg" alt="" width="370" height="294">
-            <h2>Проект LAB</h2>
-            <p>Маркетинг</p>
+            <h2 class="portfolio-list-title">Проект LAB</h2>
+            <p class="portfolio-list-category">Маркетинг</p>
           </a>
         </li>
         <li>
           <a href="" class="link">
             <img src="./images/img-growing-business.jpg" alt="Приложение Growing Business" width="370" height="294">
-            <h2>Growing Business</h2>
-            <p>Приложение</p>
+            <h2 class="portfolio-list-title">Growing Business</h2>
+            <p class="portfolio-list-category">Приложение</p>
           </a>
         </li>
       </ul>    
  </main>
       
-      <footer class="footer" id="contacts">
-        <a class="link logo-footer" href=""><span>Web</span>Studio</a>
-        <address>
-          <ul class="list">
-            <li><a href="https://goo.gl/maps/oXbqcdVndfFrmnHC9">г. Киев, пр-т Леси Украинки, 26</a></li>
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
-          </ul>
-        </address>
-      </footer> 
+ <footer class="footer" id="contacts">
+  <a class="link logo" href="./index.html">Web<span class="logo-footer">Studio</span></a>
+    <address>
+      <ul class="list contact-footer">
+        <li><a class="link contact-footer-color-adress" href="https://goo.gl/maps/oXbqcdVndfFrmnHC9">г. Киев, пр-т Леси Украинки, 26</a></li>
+        <li><a class="link contact-footer-color" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a class="link contact-footer-color" href="tel:+380961111111">+38 096 111 11 11</a></li>
+      </ul>
+    </address>
+  </footer> 
 </body>
 </html>
