last commit before

--- a/portfolio.html
+++ b/portfolio.html
@@ -13,7 +13,7 @@
 <body>
   <header class="header">
     <nav>
-      <a class="link logo" href="">Web<span class="logo-header">Studio</span></a>
+      <a class="link logo" href="./index.html">Web<span class="logo-header">Studio</span></a>
       <ul class="list">
         <li><a class="link navigation-link" href="./index.html">Студия</a></li>
         <li><a class="link navigation-link" href="./portfolio.html">Портфолио</a></li>
