--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   
  <main>
   <section class="hero">
-    <h1>Эффективные решения <br> для вашего бизнеса</h1>
+    <h1 class="hero-title">Эффективные решения <br> для вашего бизнеса</h1>
     <button class="button-hero" type="button">Заказать услугу</button>
   </section>
 
