--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <nav>
       <a class="link logo" href="">Web<span class="logo-header">Studio</span></a>
       <ul class="list">
-        <li><a class="link navigation-link" href="">Студия</a></li>
+        <li><a class="link navigation-link current-link" href="">Студия</a></li>
         <li><a class="link navigation-link" href="./portfolio.html">Портфолио</a></li>
         <li><a class="link navigation-link" href="#contacts">Контакты</a></li>
       </ul>
