--- a/portfolio.html
+++ b/portfolio.html
@@ -28,6 +28,7 @@
       
  <main>
    <section>
+    <h2 class="visually-hidden">Выбор типа работ</h2>
     <ul class="list">
       <li><button type="button" class="portfolio-button">Все</button></li>
       <li><button type="button" class="portfolio-button">Веб-сайты</button></li>
